Sostituito getfirst con get(0), per aumentare compatibilità